src/viriatum/system/service.h


struct polling_t;

struct location_t;

struct http_handler_t;

/**
 * Enumeration defining the various types
 * of service processes that may exist.
 */
typedef enum process_type_e {
    MASTER_PROCESS = 1,
    WORKER_PROCESS
} process_type;


/**
 * The function used to retrieve a string in english representing
 * the uptime of the service referred to.
 */
typedef const char *(*service_uptime)(struct service_t *, size_t);


/**
 * The function used to resolve a provided file extension (dot
 * prefixed) into the appropriate mime type.
 */
typedef const char *(*service_mime)(struct service_t *, char *);


/**
 * The function used to create a new handler instance
 * with a name and for the service context.
 */
typedef ERROR_CODE (*service_http_handler_access)(struct service_t *, struct http_handler_t **, unsigned char *name);


/**
 * The function used to update an handler state or value.
 */
typedef ERROR_CODE (*service_http_handler_update)(struct service_t *, struct http_handler_t *);


/**
 * The function called once per cycle of the loop of the service,
 * so that a module keeping something of its own running beside the
 * serving is given the control flow even while no request is being
 * handled, which is what an event loop of another runtime needs.
 */
typedef ERROR_CODE (*service_cycle)(struct service_t *);


/**
 * The "default" function used to update a state in the polling
 * for the given service context.
 */
typedef ERROR_CODE (*polling_update)(struct polling_t *);


/**
 * The function used to update a state in the polling
 * using the given connection as reference.
 */
typedef ERROR_CODE (*polling_connection_update)(struct polling_t *, struct connection_t *);


/**
 * The function used to unregister state in the polling
 * using the given connection as reference. An extra
 * parameter is provided so that one can remove the
 * connection from the polling mechanism.
 */
typedef ERROR_CODE (*polling_connection_unregister)(struct polling_t *, struct connection_t *, unsigned char);


/**
 * Structure describing a location to be
 * used by the service in the resolution
 * process.
 */
typedef struct location_t {
    /**
     * The name as a single (soft) description
     * for the location, this is not required
     * to be set or even unique.
     */
    unsigned char *name;

    /**
     * The path describing the location, this
     * may be a regular expression, a wildcard
     * or even something else.
     */
    unsigned char *path;

    /**
     * The name of the handler associated with
     * this location, this is going to be used
     * by the dispatched for correct relocation.
     */
    unsigned char *handler;

    /**
     * The hash map containg the configuration
     * of the location, this value should contain
     * the complete set of attributes parsed.
     */
    struct sort_map_t *configuration;
} location;


typedef struct locations_t {
    struct location_t values[1024];
    size_t count;
} locations;


/**
 * Structure used to describe a polling (provider)
 * with all the action functions and callbacks.
 */
typedef struct polling_t {
    /**
     * The reference to the "owning" service.
     * The "owning" service should be the
     * only using this polling (provider).
     */
    struct service_t *service;

    /**
     * Function called for opening the polling
     * (provider).
     * This function should initialize all the
     * polling context structures.
     */
    polling_update open;

    /**
     * Function called for closing the polling
     * (provider).
     * This function should destroy all the
     * polling context structures.
     */
    polling_update close;

    /**
     * Function used to register a connection
     * into the polling (provider).
     * The polling system structures should
     * be updated to allow the connection events
     * to be detected.
     */
    polling_connection_update register_connection;

    /**
     * Function used to unregister a connection
     * from the polling (provider).
     */
    polling_connection_unregister unregister_connection;

    /**
     * Function used to the start "listening"
     * to the read events in the connection.
     */
    polling_connection_update register_read;

    /**
     * Function used to the stop "listening"
     * to the read events in the connection.
     */
    polling_connection_update unregister_read;

    /**
     * Function used to the start "listening"
     * to the write events in the connection.
     */
    polling_connection_update register_write;

    /**
     * Function used to the stop "listening"
     * to the write events in the connection.
     */
    polling_connection_update unregister_write;

    /**
     * Reference to the function that is going to
     * set the provided connection as outstanding
     * mening that in the next event loop it will
     * be verified for read operations.
     */
    polling_connection_update add_outstanding;

    /**
     * Function used to poll the connections
     * checking if new "events" are available.
     * This function should not block for a long
     * time (exiting may be compromised).
     */
    polling_update poll;

    /**
     * Function to be used to process and call
     * the callbacks associated with the current
     * events.
     * This function may be called after a polling.
     */
    polling_update call;

    /**
     * The timeout (in milliseconds) to be used while waiting
     * for events in the polling operation, a negative value
     * keeps the default behaviour of the provider.
     */
    int timeout;

    /**
     * Reference to the lower level
     * connection substrate (child).
     */
    void *lower;
} polling;


/**
 * Structure used to describe a service structure.
 * The main service socket is set and shold be
 * maintained for house-keeping purposes.
 * The list of connections should represent the
 * current set of active connections.
 */
typedef struct service_t {
    /**
     * The descriptive name of the
     * service.
     * For textual representation.
     */
    unsigned char *name;

    /**
     * The version number as a string
     * for the current service structure.
     */
    unsigned char *version;

    /**
     * The platform as a string in which
     * the current service is running.
     */
    unsigned char *platform;

    /**
     * The abstract compilation flags for
     * the current service.
     */
    unsigned char *flags;

    /**
     * The name of the mechanism that the service waits
     * on its connections through, one of epoll, kqueue
     * or select depending on what the build found.
     */
    unsigned char *polling_name;

    /**
     * The description (string) of the compiler
     * used to compile the service structures.
     */
    unsigned char *compiler;

    /**
     * The version (string) of the compiler
     * used to compile the service structures.
     */
    unsigned char *compiler_version;

    /**
     * The date (as a string) for the compilation
     * of the service internal structures.
     */
    unsigned char *compilation_date;

    /**
     * The time (as a string) for the compilation
     * of the service internal structures.
     */
    unsigned char *compilation_time;

    /**
     * The complete set of flags used by the compiler
     * on the compilation process.
     */
    unsigned char *compilation_flags;

    /**
     * The string that described the currently loaded
     * modules, this string is created from the modules
     * structure list decribed "inside" the current
     * service structure.
     */
    unsigned char modules[4096];

    /**
     * The string describing the current service
     * and its configuration, useful for a quick
     * visual description of the service.
     */
    unsigned char description[1024];

    /**
     * The name (path) to the current program
     * (process) in execution for the service context.
     */
    unsigned char *program_name;

    /**
     * The current status of the service.
     * Used for service life-cycle control.
     */
    unsigned char status;

    /**
     * The start the (as seconds since epoch)
     * for the current service.
     * This value may be sued to calculate the
     * service uptime.
     */
    unsigned long long start_time;

    /**
     * The type of process that hold the
     * reference to this service.
     */
    enum process_type_e process_type;

    /**
     * The set of locations currently loaded
     * into the service.
     */
    struct locations_t locations;

    /**
     * The buffer containing the various pid values
     * for the worker processes in case they exists.
     * This buffer is used to kill the workers on
     * service closing.
     */
    PID_TYPE worker_pids[VIRIATUM_MAX_WORKERS];

    /**
     * The set of options that configure
     * the current service instance.
     * These options are used both at the
     * startup and during the runtime.
     */
    struct service_options_t *options;

    /**
     * The map containing a set of configuration
     * loaded primarly from the configuration files.
     * This map is structured by domains and the
     * first level of keys represent these domains.
     */
    struct sort_map_t *configuration;

    /**
     * The socket handle to the service
     * connection, used to accept connections.
     * This is the base socket handle for
     * the service for the ipv4 connection.
     */
    SOCKET_HANDLE service_socket_handle;

    /**
     * The socket handle to the service
     * connection, used to accept connections.
     * This is the "extra" socket handle for
     * the service for the ipv6 connection.
     */
    SOCKET_HANDLE service_socket6_handle;

    /**
     * The HTTP handler currently in use.
     * Only one HTTP (parser) handler can
     * be used at one given time.
     */
    struct http_handler_t *http_handler;

    /**
     * The reference to the polling (provider)
     * used by the service.
     */
    struct polling_t *polling;

    /**
     * The list of currenly available (active)
     * connections in the service.
     */
    struct linked_list_t *connections_list;

    /**
     * The list of modules available for the
     * service.
     * This list represents only the loaded
     * modules any unloaded or failed module
     * should not be present in this list.
     */
    struct linked_list_t *modules_list;

    /**
     * The map of HTTP handlers available
     * for the service.
     * The map associates the name of the handler
     * with the handler instance.
     */
    struct hash_map_t *http_handlers_map;

    /**
     * The templates that the service is keeping parsed,
     * the pages that are built out of one, the listing
     * of a directory and the error page among them, cost
     * only their rendering for as long as the file of the
     * template stands as it was parsed.
     */
    struct template_cache_t *template_cache;

    /**
     * Buffer used as static reference to the
     * value to be returned in the retrieval of
     * the uptime function.
     */
    char _uptime[128];

    base_void register_signals;
    service_uptime get_uptime;
    service_mime get_mime_type;
    service_http_handler_access create_http_handler;
    service_http_handler_update delete_http_handler;
    service_http_handler_update add_http_handler;
    service_http_handler_update remove_http_handler;
    service_http_handler_access get_http_handler;

    /**
     * The operation run once per cycle of the loop, unset unless a
     * module has something to advance beside the serving.
     */
    service_cycle on_cycle;

#ifdef VIRIATUM_SSL
    /**
     * The handle to the ssl socket reference that is encapsulating
     * the encrypted access to the socket.
     */
    SSL *ssl_handle;

    /**
     * The ssl configuration context that is currently being
     * used in the ssl socket handle.
     * This object is used in the construction of the handle.
     */
    SSL_CTX *ssl_context;
#endif
} service_;


/**
 * Structure defining the set of options/configuration
 * for an associated service.
 *
 * Some of the values are computed and not directly accessible
 * via a configuration paradigm.
 */
typedef struct service_options_t {
    /**
     * The "default" tcp port to bind the service
     * associated with these options.
     */
    unsigned short port;

    /**
     * The "default" tcp port to bind the service
     * associated with these options, this is the
     * string value corresponding to the integer.
     */
    unsigned char _port[128];

    /**
     * The string value structure to the port buffer
     * to be used, this value will be used for caching
     * length values.
     */
    struct string_t _port_string;

    /**
     * The "default" address to bind the service
     * associated with these options.
     */
    unsigned char *address;

    /**
     * Flag that controls if the service is meant
     * to be run "inside" an ipv6 protocol connection.
     */
    unsigned char ip6;

    /**
     * Flag that controls if the service accepts a connection
     * that opens with the preface of HTTP/2, which is the form
     * of the protocol that requires no negotiation at all.
     */
    unsigned char http2;

    /**
     * The "default" address to bind the service
     * associated with these options.
     * This is the address to be used in the ipv6
     * based connection, in case it exists.
     */
    unsigned char *address6;

    /**
     * Flag that controls if the service is meant
     * to be run "inside" an encrypted ssl channel.
     */
    unsigned char ssl;

    /**
     * The path to the ssl certificate file to be used
     * in the loading of the secure connection for this
     * service.
     */
    unsigned char *ssl_csr;

    /**
     * The path to the ssl private key file to be used
     * in the loading of the secure connection for this
     * service.
     */
    unsigned char *ssl_key;

    /**
     * The name of the "default" handler to be used
     * in the runtime environment.
     * Change this name carefully.
     */
    unsigned char *handler_name;

    /**
     * If the current service is running in
     * the local version (local file system).
     */
    unsigned char local;

    /**
     * The number of worker processes to be
     * used for handling connection (should
     * approximate to the number of cpus).
     */
    unsigned char workers;

    /**
     * If the modules available under the modules path
     * should be loaded during the opening of the service
     * (should be unset when running inside a host process).
     */
    unsigned char load_modules;

    /**
     * If the default index file should be used in case
     * the root path file is requested (index.html is
     * the default file to be served).
     */
    unsigned char default_index;

    /**
     * The root path for web content (www root), when
     * set overrides the compile-time default contents
     * path used for file serving.
     */
    unsigned char www_root[VIRIATUM_MAX_PATH_SIZE];

    /**
     * The resolved contents path, computed once at startup
     * from www_root (if set) or VIRIATUM_CONTENTS_PATH.
     */
    unsigned char contents_path[VIRIATUM_MAX_PATH_SIZE];

    /**
     * The resolved resources path, computed once at startup
     * from www_root (if set) or VIRIATUM_RESOURCES_PATH.
     */
    unsigned char resources_path[VIRIATUM_MAX_PATH_SIZE];

    /**
     * The resolved modules path, computed once at startup
     * from VIRIATUM_MODULES_PATH.
     */
    unsigned char modules_path[VIRIATUM_MAX_PATH_SIZE];

    /**
     * If the instance should use templates for error
     * messages providing a better look and feel at the
     * cost of more computer power (may create problems
     * for denial of service (dos) attacks).
     */
    unsigned char use_template;

    /**
     * If a line describing each of the requests should be
     * written to the standard output, the writing of it is
     * a call into the kernel per request and so it is the
     * kind of thing a deployment under load turns off.
     */
    unsigned char access_log;

    /**
     * If a line describing each of the errors that are answered
     * should be written to the standard output, one is written
     * per error and so a deployment that is asked over and over
     * for what is not there pays a call into the kernel for each
     * of them, the very way the request log costs one.
     */
    unsigned char error_log;

    /**
     * The default virtual host to be used in any
     * non matched host request.
     */
    struct virtual_host_t *default_virtual_host;

    /**
     * The string based buffer of file paths to the
     * index files to be used for root directory listing.
     * This value should be used as the default way to
     * discover the file to be used for directory listing.
     */
    unsigned char index[32][128];

    /**
     * The number of index objects currently available and
     * parsed from the line value.
     */
    size_t index_count;

    /**
     * The map (dictionary) containing the relations between
     * the file extension (dot prefixed) and the string based
     * mime type according to IANA.
     */
    struct hash_map_t *mime_types;

    /**
     * The set of virtual hosts associated with the
     * current service.
     * The map key is the (virtual) host name to be
     * used, default host name is not contained in
     * the list for performance.
     */
    struct hash_map_t *virtual_hosts;
} service_options;


/**
 * Enumeration defining the various
 * status to be used in a workflow driven
 * object or structure.
 */
typedef enum status_e {
    /**
     * Status where the object is open
     * or in a running "like" state.
     */
    STATUS_OPEN = 1,

    /**
     * Status where an object is closed
     * or in a stopped "like" state.
     */
    STATUS_CLOSED,

    /**
     * Status where an object is in the
     * handshake state, this is the typical
     * status for the initial part of a
     * secure encrypted connection.
     */
    STATUS_HANDSHAKE
} status;

/**
 * Constructor of the service.
 *
 * @param service_pointer The pointer to the service to
 * be constructed.
 * @param name The name of the service to be constructed.
 * @param program_name The name (path) to the current program
 * (process) in execution for the service context.
 */
void create_service(struct service_t **service_pointer, unsigned char *name, unsigned char *program_name);


/**
 * Destructor of the service.
 *
 * @param service The service to be destroyed.
 */
void delete_service(struct service_t *service);


/**
 * Loads the global wide service specifications into the
 * internal data structures that describe it.
 *
 * @param service The service to be loaded with specifications.
 * @return The resulting error code.
 */
ERROR_CODE load_specifications(struct service_t *service);


/**
 * Loads the various options, from the various data sources
 * into the service internal structures.
 *
 * @param service The service to be loaded with options.
 * @param arguments The (command line) argument map to be used
 * during the options loading.
 * @return The resulting error code.
 */
ERROR_CODE load_options_service(struct service_t *service, struct hash_map_t *arguments);


/**
 * Calculates the various options, these values correspond to the
 * various calculated attributes in the options.
 *
 * @param service The service to have the options calculated.
 * during the options loading.
 * @return The resulting error code.
 */
ERROR_CODE calculate_options_service(struct service_t *service);


/**
 * Calculates the various locations, these values correspond to the
 * various calculated attributes in the options.
 *
 * @param service The service to have the locations calculated.
 * during the options loading.
 * @return The resulting error code.
 */
ERROR_CODE calculate_locations_service(struct service_t *service);


/**
 * Prints a series of information value about the service that
 * has just been passed, the information should be sent to the
 * defined debug output.
 *
 * @param service The service to have it's internal status debugged
 * to the default output.
 * @return The resulting error code.
 */
ERROR_CODE print_options_service(struct service_t *service);


/**
 * Starts the given service, initializing the
 * internal structures and the main loop.
 *
 * @param service The service to be initialized.
 * @return The resulting error code.
 */
ERROR_CODE start_service(struct service_t *service);