src/hive_viriatum_commons/structures/hash_map.h


typedef struct hash_map_t {
    size_t size;
    size_t maximum_size;
    size_t element_size;
    size_t elements_buffer_size;
    struct hash_map_element_t *elements_buffer;
} hash_map;


typedef struct hash_map_element_t {
    void *value;
    unsigned int used;
    size_t key;
    unsigned char *key_string;
} hash_map_element;


VIRIATUM_EXPORT_PREFIX void create_hash_map(struct hash_map_t **hash_map_pointer, size_t initial_size);

VIRIATUM_EXPORT_PREFIX void delete_hash_map(struct hash_map_t *hash_map);